fixing spacing in css

--- a/css/screen.css
+++ b/css/screen.css
@@ -244,36 +244,36 @@ input[type = "text"], input[type = "email"], input[type = "submit"]{
   margin-bottom: 0.625em;   
 }
 
-
-
 /*End css for DESKTOP*/
 
 /*Start css for MOBILE*/
-@media screen and (min-width: 480px){
-  form{
-    padding-left: 1em; /* 16px / 100 %   */
-    padding-right: 1em; /* 16px / 100 %   */
-    width: 100%;
+@media screen and (min-width: 480px)
+{
+form
+	{
+  padding-left: 1em; 
+  padding-right: 1em;
+  width: 100%;
   }
-  img{
-    width: 99%;
-  }
-}
-
-/* bigger screens */
-@media screen and (min-width: 768px){
-  form{
-    width: 35%;
-    float: right;
-    padding-top: 1.875em; /* 30px / ~ 188% */
-
-  }
-  img{
-    width: 55%;
-    float: left;
+img
+	{
+  width: 99%;
   }
 }
 
-
+@media screen and (min-width: 768px)
+{
+form
+	{
+  width: 35%;
+  float: right;
+  padding-top: 1.875em;
+  }
+img
+	{
+  width: 55%;
+  float: left;
+  }
+}
 
 /*End css for MOBILE*/
